[ refactor ] OrderMenuDTO 매핑 및 그룹핑 로직 단순화 ( #17 )
- 매핑과 그룹핑을 위한 두 개의 메서드를 하나로 합치고, 스트림 연산을 직접 사용하여 개선

- List<OrderMenuDTO>로 변환한 후 그룹핑하는 중간 단계를 없애 코드 가독성 향상

- 기존 매핑 간 필요했던 `orderId` 필드를 제거